# companion-app

./: .env.example  .gitignore  .gitlab-ci.yml  FORPREETAM.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-checks.yml
agent/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
agent/src/: main.py  observability.py
agent/src/db/: client.py
agent/src/memory/: retriever.py  storage.py
agent/src/persona/: prompts.py
agent/src/services/: sarvam.py
agent/tests/: conftest.py
agent/tests/fixtures/: mock_pinecone.py  mock_responses.py
agent/tests/integration/: test_agent_lifecycle.py  test_memory_flow.py  test_memory_roundtrip.py  test_voice_pipeline.py
agent/tests/unit/: test_db_client.py  test_memory.py  test_prompts.py  test_sarvam_llm.py  test_sarvam_stt.py  test_sarvam_tts.py
docs/: BUILD_PLAN.md  IMPLEMENTATION_GUIDE.md  LIVEKIT_ARCHITECTURE.md  PRD.md  PRIVACY_POLICY.md  PROMPT_ENGINEERING.md  SETUP_GUIDE.md  TERMS_OF_SERVICE.md  TROUBLESHOOTING.md  VALIDATION_PLAN.md
mobile/KoiApp/: App.tsx  app.json  index.ts  package-lock.json  package.json
mobile/KoiApp/src/: config.ts
mobile/KoiApp/src/components/: CallControls.tsx  ConsentModal.tsx  LoadingScreen.tsx  TranscriptBubble.tsx  VoiceOrb.tsx
mobile/KoiApp/src/screens/: ConversationScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  OnboardingScreen.tsx  (+1 more)
supabase/: config.toml
supabase/functions/delete-user-data/: index.ts
supabase/functions/generate-room-token/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_add_insert_policies.sql
(+10 files in other folders)
