[tool.poetry]
name = "koi-voice-agent"
version = "0.1.0"
description = "Koi AI companion - LiveKit voice agent with Sarvam AI"
authors = ["Koi Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
livekit-agents = "^0.12"
livekit-plugins-silero = "^0.7"
httpx = "^0.27"
asyncpg = "^0.29"
pinecone-client = "^3"
python-dotenv = "^1.0"
tenacity = "^8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-timeout = "^2.2"
black = "^24.2"
ruff = "^0.3"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (mocked external services)",
    "slow: tests that take >5 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
